<resources>
    <string name="app_name">Restaurant App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hằng HT</string>
    <string name="nav_header_subtitle">hang260402@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="go_food">Go Food</string>
    <string name="dang_ky"><u>Register</u></string>
    <string name="account_name">Account name</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="register"><i>Register</i></string>
    <string name="home">Home</string>
    <string name="dish">Dish</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="favorite">Yêu thích</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="sign_in"><i>Sign in</i></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search"><i>Search</i></string>
</resources>